Import_data_on_private_securities_using_HTM_links.ipynb

--- a/Import_data_on_private_securities_using_HTM_links.ipynb
+++ b/Import_data_on_private_securities_using_HTM_links.ipynb
@@ -32,11 +32,11 @@
         "id": "_OvODfUedv8i"
       },
       "source": [
-        "**Connect to Google Drive and upload files directly** \\\n",
+        "**Connect to Google Drive and upload files directly**",
         "\n",
-        "Google Colab has a limited RAM of 12 GB, split file into smaller ones and upload onto Google Drive folder. \\\n",
+        "Google Colab has a limited RAM of 12 GB, split file into smaller ones and upload onto Google Drive folder.",
         "\n",
-        "Input the file path next to `csvFile`.\n",
+        "Input the file path next to `csvFile`.",
         "\n",
         "Use this program to split easily: [COLAB LINK](https://colab.research.google.com/drive/1RUc-R-4PDlw8JZ7Hiu2RT2YcDvZPlB44?usp=sharing)"
       ]
