--- a/Import_data_on_private_securities_using_HTM_links.ipynb
+++ b/Import_data_on_private_securities_using_HTM_links.ipynb
@@ -34,7 +34,7 @@
       "source": [
         "**Connect to Google Drive and upload files directly**\n",
         "\n",
-        "Google Colab has a limited RAM of 12 GB, split file into smaller ones and upload onto Google Drive folder.\",
+        "Google Colab has a limited RAM of 12 GB, split file into smaller ones and upload onto Google Drive folder.\n",
         "\n",
         "Input the file path next to `csvFile`.\n",
         "\n",
